--- a/src/app/Stock/Stock.component.html
+++ b/src/app/Stock/Stock.component.html
@@ -6,24 +6,24 @@
 </div>
                     <!--CATEGORIES-->
 <div class=" pt-5 d-flex  mb-5 pt-5 " >
-    <figure class="figure" style="margin-left: 10mm;" id="PVC">
-        <img src="assets/pvc.jpg"  title="PVC" class="rounded-circle"  width="200" height="180" >
+    <figure class="figure" style="margin-left: 10mm;" id="PVC" >
+        <img src="assets/pvc.jpg"  title="PVC" class="rounded-circle"  routerLink="/Pvc" width="200" height="180" >
         <figcaption class="figure-caption pt-3" style="margin-left: 20mm; font-size: 20px; color: white;" >PVC</figcaption>
     </figure>   
     <figure class="figure" style="margin-left: 10mm;" id="Peinture">   
-        <img src="assets/peinture.jpg" title="Peinture" style="margin-left: 10mm;"class="rounded-circle"  width="200" height="180" >
+        <img src="assets/peinture.jpg" title="Peinture" style="margin-left: 10mm;"class="rounded-circle"  routerLink="/peinture" width="200" height="180" >
         <figcaption class="figure-caption pt-3" style="margin-left: 25mm; font-size: 20px; color: white">Peinture</figcaption>
     </figure>
     <figure class="figure" style="margin-left: 10mm;" id="Menuiserie">   
-        <img src="assets/menuiserie.jpg"  title="Menuiserie" style="margin-left: 10mm;"class="rounded-circle"  width="200" height="180" >
+        <img src="assets/menuiserie.jpg"  title="Menuiserie" style="margin-left: 10mm;"class="rounded-circle"  routerLink="/menuiserie" width="200" height="180" >
         <figcaption class="figure-caption pt-3" style="margin-left: 25mm; font-size: 20px; color: white">Menuiserie</figcaption>
     </figure>
     <figure class="figure" style="margin-left: 10mm;" id="Plomberie">   
-        <img src="assets/plomberie.jpg"  title="Plomberie" style="margin-left: 10mm;"class="rounded-circle"  width="200" height="180" >
+        <img src="assets/plomberie.jpg"  title="Plomberie" style="margin-left: 10mm;"class="rounded-circle"  routerLink="/plomberie" width="200" height="180" >
         <figcaption class="figure-caption pt-3" style="margin-left: 25mm; font-size: 20px; color: white">Plomberie</figcaption>
     </figure>
     <figure class="figure" style="margin-left: 10mm;" id="Autres">   
-        <img src="assets/autres.jpg"  title="Autres" style="margin-left: 10mm;" class="rounded-circle"  width="200" height="180" >
+        <img src="assets/autres.jpg"  title="Autres" style="margin-left: 10mm;" class="rounded-circle"  routerLink="/autres" width="200" height="180" >
         <figcaption class="figure-caption pt-3" style="margin-left: 25mm; font-size: 22px; color: white">Autres</figcaption>
     </figure>
 </div>
