--- a/src/app/Achat/Achat.component.html
+++ b/src/app/Achat/Achat.component.html
@@ -1,1 +1,12 @@
 <app-Search></app-Search>
+
+<div>{{articles}}</div>
+
+<div class="w-75 container">
+<div class="w-75 container pt-5 ">
+    <a style="color: white ;background-color: transparent; font-size: 30px;">Total : </a>
+    <input readonly type="text" name="Total" value= "0" style="background-color: transparent; color: white; font-size: 18px;">
+    <a class="btn mx-3 btn-lg  px-5" target="_blank" routerLink="/Crédit"><span>Crédit</span></a>
+    <a class="btn mx-3 btn-lg  px-5" ><span>Cash</span></a>           
+</div>
+</div>
