--- a/src/app/search/Search.component.html
+++ b/src/app/search/Search.component.html
@@ -1,11 +1,10 @@
-
-<div class="container mt-5 pt-5" style="margin-left: 150mm;" >
+<div class="container mt-5 pt-5"  >
     <div class="input-group" >
+        <button type="button" class="btn btn-light " style="background-color: rgb(221, 214, 200);  border-color: rgb(221, 214, 200); font-size: 15px;">
+            <span class="glyphicon glyphicon-search " style="color: black; font-weight: bold;"> Rechercher</span>
+        </button>
         <div class="form-outline">
             <input type="search" id="form1" class="form-control"/>
         </div>
-        <button type="button" class="btn btn-light " style="background-color: rgb(4 99 7); border-color: rgb(4 99 7); font-size: 15px;">
-            <span class="glyphicon glyphicon-search " style="color: white;"> Rechercher</span>
-        </button>
     </div>
 </div>
