--- a/src/app/Achat/Achat.component.scss
+++ b/src/app/Achat/Achat.component.scss
@@ -1,12 +1,47 @@
 a.btn{
     font-size: 20px;
     font-weight: bold;
-    background-color: gray;
-    border-color: gray;  
-    color: white;  
+    background-color: #fae036;
+    border-color: #fae036;  
 }
 a.btn:hover{
-    background-color: rgb(228, 187, 76);
     font-size: 22px;
     border-color: black;
 }
+input[name="remise"]:focus{
+    background-color: white;
+    color: black;
+}
+input[name="quantite"]:focus{
+    background-color: white;
+    color: black;
+}
+input[name="remise"]{
+    background-color: transparent;
+    font-weight: bold;
+    font-size: 18px;
+}
+input[type=text]{
+    width:300px;
+    height:30px;
+    border-radius:20px;
+    border: none;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+
+button{
+    background-color: #fae036;
+    color:black;
+    float: right;
+    padding: 5px 10px;
+    margin-left: 3px;
+    font-size: 15px;
+    border-radius:10px;
+    border: none;
+    cursor: pointer;
+}
+
+
+
