--- a/src/app/Crédit/Crédit.component.html
+++ b/src/app/Crédit/Crédit.component.html
@@ -1,1 +1,24 @@
-<app-Search></app-Search>
+<div class=" w-75 w-75 container mt-5 mb-5 pt-5 "  >
+    <a style="color: white; font-size: 30px; ">Liste des clients :</a>
+    <a class="btn mx-3 btn-lg  px-5" style="color: black; float: right;" (click)="openForm()" ><span>Ajouter un client</span></a>
+
+</div>
+
+
+<div class="form-popup" id="myForm">
+    <form action="/action_page.php" class="form-container" #formulaire="ngForm">
+      <h1>Nouveau client</h1>
+  
+      <label for="nom"><b>Nom</b></label>
+      <input type="text" placeholder="Enter nom " name="nom" ngModel required>
+  
+      <label for="surnom"><b>Surnom</b></label>
+      <input type="text" placeholder="Enter surnom" name="surnom"ngModel >
+
+      <label for="numero"><b>Numéro</b></label>
+      <input type="tel" id="phone" name="phone" placeholder="téléphone" pattern="[0-9]{8}" ngModel >
+  
+      <button type="submit" class="btn" [disabled]="formulaire.invalid" (click)="closeForm()">Enregister</button>
+      <button type="button" class="btn" (click)="closeForm()">Fermer</button>
+    </form>
+  </div>
