--- a/src/app/Crédit/Crédit.component.html
+++ b/src/app/Crédit/Crédit.component.html
@@ -1,24 +1,47 @@
-<div class=" w-75 w-75 container mt-5 mb-5 pt-5 "  >
+
+ <div class=" d-flex pt-5 mt-5" style="position: absolute; right: 0; margin-right: 200px; width: 500px;" >
+  <input id="search" class="form-control w-50" type="text" (ngModelChange)="applyFilter($event)" (keyup)="applyFilter($event)" (change)="applyFilter($event)"  [(ngModel)]="searchValue" placeholder="  Rechercher.. " name="search"  >
+  <button class="icon"><i class="glyphicon glyphicon-search"></i></button>
+</div>
+
+<div class=" w-75  container mt-5 mb-5 pt-5 "  >
     <a style="color: white; font-size: 30px; ">Liste des clients :</a>
     <a class="btn mx-3 btn-lg  px-5" style="color: black; float: right;" (click)="openForm()" ><span>Ajouter un client</span></a>
-
+</div>
+<div class=" container  " style=" height: 450px; width: 600px; color: aliceblue;  font-size: 20px; opacity: 0.95;">
+  <div class="col">
+    <div class="row card " style="background-color: gray; font-size: 20px; font-family:Georgia, 'Times New Roman', Times, serif; ">
+      <div class="row">
+          <div class="col-6">Client</div>
+          <div class="col-6">Total crédit</div>
+      </div>
+    </div>
+    <div class="container " style="overflow-y:auto;">
+      <div class="row bg-dark  card my-1" *ngFor="let client of filteredClients ;let i=index">
+          <div class="row">
+              <div class="col-6">{{client.nom}} ({{client.surnom}})</div>
+              <div class="col-6">{{client.total}} DT</div>
+          </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
-<div class="form-popup" id="myForm">
-    <form action="/action_page.php" class="form-container" #formulaire="ngForm">
+<div class="form-popup" id="FormClient">
+    <form class="form-container" (ngSubmit)="addClient(formulaire)" #formulaire="ngForm">
       <h1>Nouveau client</h1>
   
       <label for="nom"><b>Nom</b></label>
-      <input type="text" placeholder="Enter nom " name="nom" ngModel required>
+      <input type="text" placeholder="Enter nom " name="nom" id="nom" ngModel required>
   
       <label for="surnom"><b>Surnom</b></label>
-      <input type="text" placeholder="Enter surnom" name="surnom"ngModel >
+      <input type="text" placeholder="Enter surnom" name="surnom" id="surnom" ngModel required >
 
       <label for="numero"><b>Numéro</b></label>
-      <input type="tel" id="phone" name="phone" placeholder="téléphone" pattern="[0-9]{8}" ngModel >
+      <input type="tel" id="numero" name="numero" placeholder="téléphone" pattern="[0-9]{8}" ngModel >
   
-      <button type="submit" class="btn" [disabled]="formulaire.invalid" (click)="closeForm()">Enregister</button>
+      <button type="submit" class="btn"  [disabled]="formulaire.invalid">Enregister</button>
       <button type="button" class="btn" (click)="closeForm()">Fermer</button>
     </form>
   </div>
