--- a/src/app/Stock/Stock.component.html
+++ b/src/app/Stock/Stock.component.html
@@ -29,8 +29,8 @@
         <figcaption class="figure-caption pt-3" style="margin-left: 25mm; font-size: 22px; color: white">Autres</figcaption>
     </figure>
 </div>
-<div class=" w-75 w-75 container mt-5 mb-5 pt-5 " style="float: right;" >
-        <a class="btn mx-3 btn-lg  px-5" (click)="openForm()" style="color: black;" ><span>Ajouter un Article</span></a>
+<div class=" w-75 w-75 container mt-5 mb-5 pt-5 " style="margin-right:10px" >
+        <a class=" btn mx-3 btn-lg  px-5" (click)="openForm()" style="color: black;" ><span>Ajouter un Article</span></a>
         <a class="btn mx-3 btn-lg  px-5" (click)="openFormMiseAjour()" style="color: black;"><span>Mise à jour d'un article </span></a> 
 </div>
 
@@ -68,23 +68,24 @@
               <!--FORMULAIRE Mise à jour-->
 <div class="form-popup" id="FormMiseAjour">
     <h1>Mise à jour</h1>
-    <form class="form-container"  (ngSubmit)="enregistrer(form)" #form="ngForm" >
+    <form class="form-container"  (ngSubmit)="enregistrer(f)" #f="ngForm" >
   
       <label for="nom"><b>Nom</b></label>
-      <select>
-          <option id="name" *ngFor="let article of articles" ngModel required>{{article.nom}}</option>
+      <select id="name" (change)="remplissage($event)" ngModel name="nom">
+          <option disabled selected> choisir un article</option>
+          <option *ngFor="let article of articles"  value={{article.nom}} required>{{article.nom}}</option>
       </select>
   
       <label for="prix_achat"><b>Prix d'achat</b></label>
-      <input type="number"  id="prixAchat" placeholder='0' name="prix_achat" ngModel >
+      <input type="number"  id="prix_achat" placeholder='0' value={{achat}} name="prix_achat" ngModel >
 
       <label for="prix_vente"><b>Prix de vente</b></label>
-      <input type="number"  id="prixVente" placeholder='0' name="prix_vente"ngModel >
+      <input type="number"  id="prix_vente" placeholder='0' value={{vente}} name="prix_vente" ngModel >
 
       <label for="quantité"><b>Quantité</b></label>
-      <input type="text" placeholder='0' id="stock" name="quantité" ngModel >
+      <input type="number" placeholder='0' id="stock" value={{stock}} name="quantité" ngModel >
 
-      <button type="submit" class="btn  px-5 mt-5" [disabled]="form.invalid">Enregister</button>
+      <button type="submit" class="btn  px-5 mt-5" [disabled]="f.invalid">Enregister</button>
       <button type="button" class="btn  px-5 mt-5" (click)="closeFormMiseAjour()">Fermer</button>
     </form>
     
