--- a/src/app/Crédit/Crédit.component.scss
+++ b/src/app/Crédit/Crédit.component.scss
@@ -91,3 +91,9 @@ a.btn{
     color: white;
     font-size: 15px;
   }
+
+ [name='client'] :hover{
+    opacity: 1;
+    background-color: lightgray;
+    color: black;
+  }
