--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,13 +4,13 @@
   </div>
   <div class="d-flex justify-content-center  ">
  
-      <a class="hv btn btn-light mx-3 btn-lg  px-5" target="_blank" routerLink="/Achat"><span>Achat</span></a>
+      <a class="hv btn btn-light mx-3 btn-lg  px-5"  routerLink="/Achat"><span>Achat</span></a>
 
-      <a class="hv btn btn-light mx-3 btn-lg px-5" target="_blank"  routerLink="/Crédit"><span>Crédit</span></a>
+      <a class="hv btn btn-light mx-3 btn-lg px-5"   routerLink="/Clients"><span>Clients</span></a>
     
-      <a class="hv btn btn-light mx-3 btn-lg px-5" target="_blank" routerLink="/Stock"><span>Stock</span></a>
+      <a class="hv btn btn-light mx-3 btn-lg px-5"  routerLink="/Stock"><span>Stock</span></a>
 
-      <a class="hv btn btn-light mx-3 btn-lg px-5" target="_blank"  routerLink="/Profit" ><span>Profit</span></a>
+      <a class="hv btn btn-light mx-3 btn-lg px-5"   routerLink="/Profit" ><span>Profit</span></a>
 
   </div>
 </div>
