--- a/src/app/CLient/Client.component.html
+++ b/src/app/CLient/Client.component.html
@@ -1,46 +1,69 @@
 <div class=" w-75  d-flex mt-5 mb-5 pt-3">
-    <a style="color: white;; font-size: 30px; font-weight: bold; margin-left: 220px;">{{client.nom}} ({{client.surnom}})</a>
+    <a style="color: white;; font-size: 30px; font-weight: bold; margin-left: 220px;">{{client?.nom}} ({{client?.surnom}})</a>
     <div class=" d-flex " style="position: absolute; right: 0; margin-right: 80px; width: 500px;" >
         <h4 style="color: #fae036 ;background-color: transparent; font-size: 30px;">Total : </h4>
-        <input readonly type="text" name="Total" value= "{{client.total}} DT" style="background-color: white; color: black; font-size: 20px; width:fit-content;margin-left: 10px;">
+        <input readonly type="text" name="Total" value= "{{client?.total}} DT" style="background-color: white; color: black; font-size: 20px; width:fit-content;margin-left: 10px;">
         <a class="btn mx-3 btn-lg  px-5" (click)="openForm()"><span>Payer</span></a> 
     </div>
 </div>
-<div class=" container w-100" style=" height: 450px; color: aliceblue;  font-size: 20px; opacity: 0.95;">
-    <div class="col pt-3">
-        <div class="row w-100 card " style="background-color: gray;  ">
-            <div class="row">
-                <div class="col-6">Article</div>
-                <div class="col-2">Prix unitaire</div>
-                <div class="col-2">quantité</div>
-                <div class="col-2">Supprimer</div>
+<div class="split left" >
+    <div class=" container w-100" style=" height: 450px; color: aliceblue;  font-size: 15px; opacity: 0.95;">
+        <h2>Articles Achetés: </h2>
+        <div class="col pt-3">
+            <div class="row w-100 card " style="background-color: gray;  ">
+                <div class="row">
+                    <div class="col-6">Article</div>
+                    <div class="col-2">Prix unitaire</div>
+                    <div class="col-2">quantité</div>
+                    <div class="col-2">Supprimer</div>
+                </div>
             </div>
-        </div>
-        <div class="container " style="overflow-y:auto; height: 420px;">
-            <div class="row bg-dark w-100 card my-1" *ngFor="let articleAchete of articlesAchetesPerClient ;let i=index">
-                <div class="row" style="color: white; font-size: 18px;">
-                    <div class="col-6">{{articleAchete.nom}}</div>
-                    <div class="col-2">{{articleAchete.prix_unitaire}}</div>
-                    <div class="col-2">{{articleAchete.quantite}}</div>
-                    <div class="col-2"><i id="{{articleAchete.nom}}" class="glyphicon glyphicon-trash" ></i></div>
+            <div class="container " style="overflow-y:auto; height: 420px;">
+                <div class="row bg-dark w-100 card my-1" *ngFor="let articleAchete of articlesAchetesPerClient ;let i=index">
+                    <div class="row" style="color: white; font-size: 18px;">
+                        <div class="col-6">{{articleAchete.nom}}</div>
+                        <div class="col-2">{{articleAchete.prix_unitaire}}</div>
+                        <div class="col-2">{{articleAchete.quantite_achetee}}</div>
+                        <div class="col-2"><i name="supprimer" id="{{articleAchete.nom}}" (click)="delete(i)"class="glyphicon glyphicon-trash" ></i></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
+<div class="split right">
+    <div class=" container w-100" style=" height: 450px; color: aliceblue;  font-size: 15px; opacity: 0.95;">
+        <h2>Transactions : </h2>
+        <div class="col pt-3">
+            <div class="row w-100 card " style="background-color: gray;  ">
+                <div class="row">
+                    <div class="col-8">Date</div>
+                    <div class="col-2">Montant</div>
+                </div>
+            </div>
+            <div class="container " style="overflow-y:auto; height: 420px;">
+                <div class="row bg-dark w-100 card my-1" *ngFor="let transaction of transactionsPerClient ;let i=index">
+                    <div class="row" style="color: white; font-size: 18px;">
+                        <div class="col-8">{{transaction.date | date: 'dd/MM/yyyy'}}</div>
+                        <div class="col-2">{{transaction.montant}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
                         <!--FORMULAIRE transaction-->
-                        
+
 <div class="form-popup" id="transactionForm">
-    <form class="form-container" (ngSubmit)="onClickEnregistrer(formulaire)" #formulaire="ngForm">
       <h1>Paiement</h1>
-  
-      <label for="date"><b>Date</b></label>
+      <form class="form-container" (ngSubmit)="onClickEnregistrer(formulaire)" #formulaire="ngForm">
+     
+      <label for="date"><b>Date : </b></label>
       <input type="date"  name="date" id="date" ngModel required>
   
-      <label for="montant"><b>Montant à payer</b></label>
-      <input type="text" placeholder="Enter monatant" name="montant" id="montant" ngModel required>
-  
+      <label for="montant"><b>Montant  : </b></label>
+      <input type="number" placeholder="Enter montant" name="montant" id="montant" ngModel required>
+    
       <button type="submit" class="btn"  [disabled]="formulaire.invalid">Enregister</button>
       <button type="button" class="btn" (click)="closeForm()">Fermer</button>
     </form>
