--- a/src/app/Stock/Stock.component.html
+++ b/src/app/Stock/Stock.component.html
@@ -53,6 +53,7 @@
 
       <label for="catégorie"><b>Catégorie</b></label>
       <select  class="form-control" id="catégorie" name="catégorie" ngModel required>
+        <option disabled selected> choisir une catégorie</option>
         <option value="pvc">PVC</option>
         <option value="peinture">Peinture</option>
         <option value="plomberie">Plomberie</option>
