--- a/src/app/CLient/Client.component.scss
+++ b/src/app/CLient/Client.component.scss
@@ -1,3 +1,24 @@
+/* Split the screen in half */
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 10;
+  overflow-x: hidden;
+  
+}
+
+/* Control the left side */
+.left {
+  left: 0;
+}
+
+/* Control the right side */
+.right {
+  right: 0;
+}
+
 a.btn{
     font-size: 20px;
     font-weight: bolder;
@@ -8,3 +29,59 @@ a.btn:hover{
     font-size: 22px;
     border-color: black;
 }
+
+
+
+  /* The popup form - hidden by default */
+  .form-popup {
+    display: none;
+    position: absolute;
+    top: 70px;
+    right: 500px;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+    background-color: white;
+  }
+  
+  /* Add styles to the form container */
+  .form-container {
+    
+    padding: 10px;
+    display:grid;
+    grid-template-columns: max-content max-content;
+    grid-gap:5px;
+  }
+  
+  /* Full-width input fields */
+  select,.form-container input[type=date],.form-container input[type=number]{
+    width: 100%;
+    padding: 15px;
+    border: #fae036;
+    background: #f1f1f1;
+    font-size: 15px;
+  }
+  
+  div [name="supprimer"]:hover{
+   color:#fae036;
+  }
+  
+  /* Set a style for the submit/login button */
+  button {
+    background-color: gray;
+    color: black;
+    margin-left: 40px;
+    margin-bottom:10px;
+    font-size: 15px;
+    font-weight: bold;
+    width: 30mm;
+  }
+
+  button:hover{
+    transform: scale(1.1);
+    border-color: black;
+  }
+  
+  label{
+      font-size: 15px;
+      font-weight: bold;
+  }
