--- a/src/app/Crédit/Crédit.component.html
+++ b/src/app/Crédit/Crédit.component.html
@@ -1,5 +1,5 @@
 
- <div class=" d-flex pt-5 mt-5" style="position: absolute; right: 0; margin-right: 200px; width: 500px;" >
+ <div class=" d-flex  mt-5" style="position: absolute; right: 0; margin-right: 200px; width: 500px;" >
   <input id="search" class="form-control w-50" type="text" (ngModelChange)="applyFilter($event)" (keyup)="applyFilter($event)" (change)="applyFilter($event)"  [(ngModel)]="searchValue" placeholder="  Rechercher.. " name="search"  >
   <button class="icon"><i class="glyphicon glyphicon-search"></i></button>
 </div>
@@ -8,7 +8,7 @@
     <a style="color: white; font-size: 30px; ">Liste des clients :</a>
     <a class="btn mx-3 btn-lg  px-5" style="color: black; float: right;" (click)="openForm()" ><span>Ajouter un client</span></a>
 </div>
-<div class=" container  " style=" height: 450px; width: 650px; color: aliceblue;  font-size: 20px; opacity: 0.95;">
+<div class=" container  " style=" height: 400px; width: 650px; color: aliceblue;  font-size: 20px; opacity: 0.95;">
   <div class="col">
     <div class="row card " style="background-color: gray; font-size: 20px; font-family:Georgia, 'Times New Roman', Times, serif; ">
       <div class="row">
@@ -16,7 +16,7 @@
           <div class="col-6">Total crédit</div>
       </div>   
     </div>
-    <div class="container " style="overflow-y:auto; height: 420px;">
+    <div class="container " style="overflow-y:auto; height: 400px;">
       <div class="row bg-dark  card my-1"  name="client" *ngFor="let client of filteredClients ;let i=index">
           <div class="row"  (click)="onClickNomClient(i)" >
               <div class="col-6">{{client.nom}} ({{client.surnom}})</div>
