--- a/src/app/Profit/Profit.component.html
+++ b/src/app/Profit/Profit.component.html
@@ -1,47 +1,8 @@
                     <!--TITRE-->
-<div class="container mb-5 pt-5">
-    <div class=" w-75 container mt-5 mb-3" >
-      <h3 style="color: white; font-size: 30px;">Profit :</h3>
+<div class=" container mt-3  pt-5 " >
+    <div class="w-75 container" >
+        <a style="color: white; font-size: 30px;">Profit :</a>
     </div>
 </div>
-                    <!--Peinture-->
-<div class=" w-75 container " >        
-    <div class=" w-75 container " >                      
-              
-    <div class=" w-75 container mb-4 " >
-        <a class="hv btn btn-light mx-3 btn-lg  px-5" style="background-color: grey;border-color: grey; " routerLink="/Peinture"><span>Peinture</span></a>
-        <input readonly type="text" id="Peinture" name="Peinture" value="50.000DT" >
-    </div>   
-                        <!--PVC-->
-    <div class=" w-75 container  mb-4 ">
-        <a class="hv btn btn-light mx-3 btn-lg  px-5"  style="background-color: grey; border-color: grey;"  routerLink="/PVC"><span>PVC</span></a>
-        <input readonly type="text" name="PVC" id="PVC" value="50.000DT" >
-    </div>  
-                        <!--Menuiserie-->
-    <div class="w-75 container  mb-4 ">
-        <a class="hv btn btn-light mx-3 btn-lg  px-5"  style="background-color: grey; border-color: grey;"  routerLink="/Menuiserie"><span>Menuiserie</span></a>
-        <input readonly type="text" name="Menuiserie" id="Menuiserie" value="50.000DT" >
-    </div>  
-                        <!--Plomberie-->
-    <div class="w-75 container  mb-4 ">
-        <a class="hv btn btn-light mx-3 btn-lg  px-5"  style="background-color: grey; border-color: grey;"  routerLink="/Plomberie"><span>Plomberie</span></a>
-        <input readonly type="text" name="Plomberie" id="Plomberie" value="50.000DT" >
-    </div> 
-                        <!--Autres-->
-    <div class="w-75 container  mb-4 ">
-        <a class="hv btn btn-light mx-3 btn-lg  px-5"  style="background-color: grey; border-color: grey;"  routerLink="/Autres"><span>Autres</span></a>
-        <input readonly type="text" name="Autres" id="Autres"value="50.100DT" >
-    </div>
-</div>
-<div class="w-75 container ">
-    <div class="w-75 container ">
-        <div class="w-75 container ">
-            <div class=" w-75 container " style="margin-left: 100mm;">
-                <a style="color: white; font-size: 30px;">Total : </a>
-                <input readonly type="text" name="Total" value= "{{valeur}}">
-            </div>   
-        </div>
-    </div>
-</div>
-    
-</div>
+
+
