--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,12 @@
 <nav class="fixed-top" >
-  <div class="container-fluid mt-2">
-    <a class="navbar-brand" href="" >
+  <div class="d-flex mt-1">
+    <a class="navbar-brand" href="" style="padding-left: 10px;">
       <img width="50"src="assets/logo1.png" >
     </a>
-  <div class="mt-2">
     <ul class="navbar-nav">
       <li class="nav-item active">
           <h2 class="nav-link text-white bold" href="">Quincaillerie Nader && Jawhar</h2>
       </li>    
     </ul>
-  </div>
   </div>
 </nav>
