--- a/src/app/Profit/Profit.component.html
+++ b/src/app/Profit/Profit.component.html
@@ -1,7 +1,22 @@
                     <!--TITRE-->
 <div class=" container mt-3  pt-5 " >
     <div class="w-75 container" >
-        <a style="color: white; font-size: 30px;">Profit :</a>
+        <a name='titre' style="color: white; font-size: 30px;">Profit :</a>
+    </div>
+</div>
+
+<div class="container w-75">
+    <div class="container w-50 pt-5">
+        <a class="hv btn btn-light mx-3 btn-lg  px-5" routerLink="/profitJournal"><span>Profit du jour</span></a>
+    </div>
+    <div class="container w-50 pt-5">
+        <a class="hv btn btn-light mx-3 btn-lg  px-5"routerLink="/profitHebdomadaire"><span>Profit hebdomadaire</span></a>
+    </div>
+    <div class="container w-50 pt-5">
+        <a class="hv btn btn-light mx-3 btn-lg px-5"routerLink="/profitMensuel" ><span>Profit mensuel</span></a>
+    </div>
+    <div class="container w-50 pt-5"> 
+        <a class="hv btn btn-light mx-3 btn-lg  px-5"routerLink="/profitAnnuel"><span>Profit annuel</span></a>
     </div>
 </div>
 
