--- a/src/app/Profit/Profit.component.scss
+++ b/src/app/Profit/Profit.component.scss
@@ -1,4 +1,4 @@
-a{
+a[name="titre"]{
     font-size: 20px;
     font-weight: bold;
     width: 40mm;
@@ -10,5 +10,17 @@ input{
     font-size: 20px;
 }
 a:hover{
+    color: white;
+}
+
+.hv:hover{
+	transform: scale(1.1);
+    opacity: 1;
+}
+.hv{
+    background-color: rgb(54, 54, 53);
+    opacity: 0.7;
+	font-size: 30px;
+    width: 500px;
     color: white;
 }
