--- a/src/app/Profit/profitJournal/profitJournal.component.html
+++ b/src/app/Profit/profitJournal/profitJournal.component.html
@@ -9,11 +9,11 @@
         <div class=" container pt-5">
             <div class="d-flex pt-2 ">
                 <h4 style="color:rgb(0, 0, 0); background-color: transparent; font-size: 35px; ">Profit Total : </h4>
-                <input readonly type="text" name="Total" value= "{{profitTotal}} DT" style="background-color: rgb(204, 204, 204); margin-left: 15px; font-weight: bold; ">
+                <input readonly type="text" name="Total" value= "{{profitTotal}} DT" style="background-color: rgb(204, 204, 204); margin-left: 15px; font-weight: bold; font-size: 20px;">
             </div>
             <div class="d-flex pt-3">
                 <h4 style="color:rgb(0, 0, 0); background-color: transparent; font-size: 35px;">Profit Net : </h4>
-                <input readonly type="text" name="Total" value= "{{profitNet}} DT" style="background-color: rgb(204, 204, 204); margin-left: 32px;font-weight: bold;">
+                <input readonly type="text" name="Total" value= "{{profitNet}} DT" style="background-color: rgb(204, 204, 204); margin-left: 32px;font-weight: bold; font-size: 20px;">
             </div>
         </div>
     </div>
